compiler/tests/en/errors/dup_meta.salam
// EXPECT: duplicate
@en "thing"
@fa "chiz"
@fa "chiz2"
pub func Thing() : int:
    ret 1
end

func main:
    println Thing()
end
